syntax = "proto3";

package raftpb;

// Example RequestVote RPC arguments structure.
message RequestVoteArgs {
    // Your data here (2A, 2B).
    uint64 id = 1;
    uint64 term = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
}

// Example RequestVote RPC reply structure.
message RequestVoteReply {
    // Your data here (2A).
    uint64 id = 1;
    uint64 term = 2;
    bool vote = 3;
}

enum RequestType {
    HEARTBEAT = 0;
}

message AppendEntry {
    uint64 term = 1;
    uint64 index = 2;
    bytes command = 3;
}

message AppendEntriesArgs {

    uint64 id = 1;
    uint64 term = 2;
    uint64 pre_log_index = 3;
    uint64 pre_log_term = 4;
    repeated AppendEntry entries = 5;
    uint64 leader_commit = 6;
}

message AppendEntriesReply {
    uint64 id = 1;
    uint64 term = 2;
    bool accept = 3;
    uint64 pre_log_index = 4;
    uint64 matched_index = 5;
}